11/SPOT-ALB-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spot-alb-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spot-alb-ingress
  name:  spot-alb-ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spot-alb-ingress
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spot-alb-ingress
    spec:
      containers:
      - image: public.ecr.aws/nginx/nginx:1.31-alpine-slim
        imagePullPolicy: Always
        name: spot-alb-ingress
        ports:
        - containerPort: 80
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: eks.amazonaws.com/capacityType
                operator: In
                values:
                - SPOT
      tolerations:
      - key: "spotInstance"
        operator: "Equal"
        value: "true"
        effect: "PreferNoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  namespace: spot-alb-ingress
  name: spot-alb-ingress
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: spot-alb-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spot-alb-ingress
  name: spot-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spot-alb-ingress
              port:
                number: 80
